# ef_py

./: README.md  pyproject.toml
effective_python/044_use_attributes_instead_of_getter_and_setter_methods/: bad.py  better_if_needed.py  fun_facts.py  good.py
effective_python/047_use_getattr_setattr_getattribute_methods/: intro.py
effective_python/048_check_subclasses_with_init_subclass/: bad.py  better.py  good.py
effective_python/049/: __init__.py  better.py  good.py
effective_python/049_register_classes_using_init_subclass/: better.py  good.py
effective_python/050_use_set_name_to_add_attribute_annotations/: best.py  better.py
tests/: test_effective_python.py
